--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ configurations {
     }
 }
 
+
+
 repositories {
     mavenCentral()
 }
@@ -35,13 +37,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-/*	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.11'  // Spring Boot OAuth2 Client
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'        // Spring Security
-	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.13'*/
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+    implementation 'mysql:mysql-connector-java:8.0.33'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
