--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -69,17 +69,15 @@ jobs:
           ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd /home/ubuntu/app
             
-            # 최신 버전의 application.yml 적용
-            echo "${{ secrets.APPLICATION_YML }}" > application.yml
           
             # 최신 Docker 이미지 Pull
             docker pull ${{ env.DOCKER_IMAGE }} 
           
-            export DOCKER_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-            # `deploy.sh` 실행 시 ALB 관련 환경 변수 전달
-            export ALB_LISTENER_ARN=${{ secrets.ALB_LISTENER_ARN }}
-            export BLUE_TARGET_GROUP_ARN=${{ secrets.BLUE_TARGET_GROUP_ARN }}
-            export GREEN_TARGET_GROUP_ARN=${{ secrets.GREEN_TARGET_GROUP_ARN }}
+            echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" > .env
+            echo "DOCKER_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/nolleogasil-backend:latest" >> .env
+            echo "ALB_LISTENER_ARN=${{ secrets.ALB_LISTENER_ARN }}" >> .env
+            echo "BLUE_TARGET_GROUP_ARN=${{ secrets.BLUE_TARGET_GROUP_ARN }}" >> .env
+            echo "GREEN_TARGET_GROUP_ARN=${{ secrets.GREEN_TARGET_GROUP_ARN }}" >> .env
 
             # Blue/Green 배포 스크립트 실행
             sudo chmod u+x ./deploy.sh
