--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: 
       - main  # ✅ main 브랜치에서만 실행
+  workflow_dispatch:  # ✅ 수동 실행을 허용하는 트리거 추가
     
   pull_request:
     branches-ignore:
